Creando modulo agregar producto

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <section class="container__banner">
             <div class="banner">
                 <div class="banner__texto">
-                    <h2>Febrero Promocional</h2>
+                    <h2>DIciembre Promocional</h2>
                     <p>Productos selecionados con 33% de descuento</p>
                     <button class="banner__promocional___boton">Ver Consola</button>
                 </div> 
@@ -133,7 +133,7 @@
                         <a href="" class="ir__producto">Ver producto</a>
                     </div>
                     <div class="card">
-                        <a href=""><img src="./imagenes/unsplash_k-xYhI3-gJM.svg"></a>
+                        <a href=""><img src="./imagenes/unsplash_Zjn4dT993-g.svg"></a>
                         <h2 class="producto">Producto XYZ</h2>
                         <h3 class="precio">$60.00</h3>
                         <a href="" class="ir__producto">Ver producto</a>
