Creando modulo de nuevo producto

--- a/paginas/agregar-nuevo.html
+++ b/paginas/agregar-nuevo.html
@@ -30,6 +30,9 @@
                         <input type="text" class="buscador__texto" placeholder="¿Qué deseas buscar?">
                         <button class="buscar__boton"><img src="../imagenes/lupa-buscar.svg"></button>
                     </div>
+                    <div class="btn_menu-admin">
+                        <button class="bonton__cabecera">Menu Administrador</button>
+                    </div>
                 </div>
                
             </section>
@@ -81,7 +84,7 @@
                     <label for="text-contacto" id="nombre">Nombre</label>
                     <input id="text-contacto" type="text" name="user_name" required>
                     <textarea cols="70" rows="5" id="msg" name="user_msg" placeholder="Escribe tu mensaje" ></textarea> 
-                    <button type="submit" class="boton__enviar">Enviar mensaje</button>
+                    <button type="submit" class="boton__enviar boton">Enviar mensaje</button>
                 </form>
             </div> 
         </section>
