subiendo modificaciones generales

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <header>
             <section class="cabecera">
                 <div class="logo">
-                    <img class="img-logo" src="./imagenes/logo-wish.png" width="150">
+                    <a href="/index.html"><img class="img-logo" src="./imagenes/logo-wish.png" width="150"></a>
                 </div>
                 <div class="cabecera__contenedor">
                     <div class="buscador">
@@ -33,75 +33,74 @@
                         <button class="buscar__boton"><img src="./imagenes/lupa-buscar.svg"></button>
                     </div>
                     <div class="boton__login">
-                        <button class="btn_login">Login</button>
+                        <button class="btn_login" id="boton_login">Login</button>
                     </div>
-                </div>
-               
+                </div> 
             </section>
         </header>
         <section class="container__banner">
             <div class="banner">
                 <div class="banner__texto">
-                    <h2>DIciembre Promocional</h2>
+                    <h1>Diciembre Promocional</h2>
                     <p>Productos selecionados con 33% de descuento</p>
-                    <button class="banner__promocional___boton">Ver Consola</button>
+                    <button class="banner__promocional___boton" id="botonPromocional">Ver Consola</button>
                 </div> 
                 <div class="banner__imagen">
                    <img src="./imagenes/banner.png"> 
                 </div>              
             </div>
         </section>
-        <main>
-            <section class="container__seccion">
+        <main class="containerPrincipal">
+            <section class="container__seccion container_1" id="">
                 <div class="container__titulo">
-                    <h2>Star Wars</h2>
+                    <h2 id="star_wars">Star Wars</h2>
                     <div class="container__verTodo">
                         <p>ver todo</p>
                         <img src="./imagenes/flecha-derecha.svg">
                     </div>
                 </div>
                 <div class="contenedor__card">
-                    <div class="card">
-                        <a href=""><img src="./imagenes/unsplash_6FDXGY9J6y4.svg"></a>
+                    <div class="card" id="">
+                        <a href="" category="starWars" ><img src="./imagenes/unsplash_6FDXGY9J6y4.svg" id=""></a>
                         <h2 class="producto">Producto XYZ</h2>
                         <h3 class="precio">$60.00</h3>
                         <a href="" class="ir__producto">Ver producto</a>
                     </div>
                     <div class="card">
-                        <a href=""><img src="./imagenes/unsplash_epRFE_hBNjo.svg"></a>
+                        <a href="" category="starWars"><img src="./imagenes/unsplash_epRFE_hBNjo.svg"></a>
                         <h2 class="producto">Producto XYZ</h2>
                         <h3 class="precio">$60.00</h3>
                         <a href="" class="ir__producto">Ver producto</a>
                     </div>
                     <div class="card">
-                        <a href=""><img src="./imagenes/unsplash_KeGToDVN0l4.svg"></a>
+                        <a href="" category="starWars"><img src="./imagenes/unsplash_KeGToDVN0l4.svg"></a>
                         <h2 class="producto">Producto XYZ</h2>
                         <h3 class="precio">$60.00</h3>
                         <a href="" class="ir__producto">Ver producto</a>
                     </div>
                     <div class="card">
-                        <a href=""><img src="./imagenes/unsplash_4OHkK555s1A.svg"></a>
+                        <a href="" category="starWars"><img src="./imagenes/unsplash_4OHkK555s1A.svg"></a>
                         <h2 class="producto">Producto XYZ</h2>
                         <h3 class="precio">$60.00</h3>
                         <a href="" class="ir__producto">Ver producto</a>
                     </div>
                     <div class="card">
-                        <a href=""><img src="./imagenes/unsplash_R8L1l9RN198.svg"></a>
+                        <a href="" category="starWars"><img src="./imagenes/unsplash_R8L1l9RN198.svg"></a>
                         <h2 class="producto">Producto XYZ</h2>
                         <h3 class="precio">$60.00</h3>
                         <a href="" class="ir__producto">Ver producto</a>
                     </div>
                     <div class="card">
-                        <a href=""><img src="./imagenes/unsplash_1VV1MRafd7A.svg"></a>
+                        <a href="" category="starWars"><img src="./imagenes/unsplash_1VV1MRafd7A.svg"></a>
                         <h2 class="producto">Producto XYZ</h2>
                         <h3 class="precio">$60.00</h3>
                         <a href="" class="ir__producto">Ver producto</a>
                     </div>
                 </div>
             </section>
-            <section class="container__seccion">
+            <section class="container__seccion container_2">
                 <div class="container__titulo">
-                    <h2>Consolas</h2>
+                    <h2 id="consola">Consolas</h2>
                     <div class="container__verTodo">
                         <p>ver todo</p>
                         <img src="./imagenes/flecha-derecha.svg">
@@ -109,46 +108,46 @@
                 </div>
                 <div class="contenedor__card">
                     <div class="card">
-                        <a href=""><img src="./imagenes/unsplash_0POwK6iAiRQ.svg"></a>
+                        <a href="" category="consola"><img src="./imagenes/unsplash_0POwK6iAiRQ.svg"></a>
                         <h2 class="producto">Producto XYZ</h2>
                         <h3 class="precio">$60.00</h3>
                         <a href="" class="ir__producto">Ver producto</a>
                     </div>
                     <div class="card">
-                        <a href=""><img src="./imagenes/unsplash_caNzzoxls8Q.svg"></a>
+                        <a href="" category="consola"><img src="./imagenes/unsplash_caNzzoxls8Q.svg"></a>
                         <h2 class="producto">Producto XYZ</h2>
                         <h3 class="precio">$60.00</h3>
                         <a href="" class="ir__producto">Ver producto</a>
                     </div>
                     <div class="card">
-                        <a href=""><img src="./imagenes/unsplash_ZV7lnfyQLmA.svg"></a>
+                        <a href="" category="consola"><img src="./imagenes/unsplash_ZV7lnfyQLmA.svg"></a>
                         <h2 class="producto">Producto XYZ</h2>
                         <h3 class="precio">$60.00</h3>
                         <a href="" class="ir__producto">Ver producto</a>
                     </div>
                     <div class="card">
-                        <a href=""><img src="./imagenes/unsplash_wa5z9o9fgjw.svg"></a>
+                        <a href="" category="consola"><img src="./imagenes/unsplash_wa5z9o9fgjw.svg"></a>
                         <h2 class="producto">Producto XYZ</h2>
                         <h3 class="precio">$60.00</h3>
                         <a href="" class="ir__producto">Ver producto</a>
                     </div>
                     <div class="card">
-                        <a href=""><img src="./imagenes/unsplash_Zjn4dT993-g.svg"></a>
+                        <a href="" category="consola"><img src="./imagenes/unsplash_Zjn4dT993-g.svg"></a>
                         <h2 class="producto">Producto XYZ</h2>
                         <h3 class="precio">$60.00</h3>
                         <a href="" class="ir__producto">Ver producto</a>
                     </div>
                     <div class="card">
-                        <a href=""><img src="./imagenes/unsplash_k-xYhI3-gJM.svg"></a>
+                        <a href="" category="consola"><img src="./imagenes/unsplash_k-xYhI3-gJM.svg"></a>
                         <h2 class="producto">Producto XYZ</h2>
                         <h3 class="precio">$60.00</h3>
                         <a href="" class="ir__producto">Ver producto</a>
                     </div>
                 </div>
             </section>
-            <section class="container__seccion">
+            <section class="container__seccion container_3">
                 <div class="container__titulo">
-                    <h2>Diversos</h2>
+                    <h2 id="diverso">Diversos</h2>
                     <div class="container__verTodo">
                         <p>ver todo</p>
                         <img src="./imagenes/flecha-derecha.svg">
@@ -156,37 +155,37 @@
                 </div>
                 <div class="contenedor__card">
                     <div class="card">
-                        <a href=""><img src="./imagenes/unsplash_fMP-oCze3AY.svg"></a>
+                        <a href="" category="diversos"><img src="./imagenes/unsplash_fMP-oCze3AY.svg"></a>
                         <h2 class="producto">Producto XYZ</h2>
                         <h3 class="precio">$60.00</h3>
                         <a href="" class="ir__producto">Ver producto</a>
                     </div>
                     <div class="card">
-                        <a href=""><img src="./imagenes/unsplash_bUgaIaZysH0.svg"></a>
+                        <a href="" category="diversos"><img src="./imagenes/unsplash_bUgaIaZysH0.svg"></a>
                         <h2 class="producto">Producto XYZ</h2>
                         <h3 class="precio">$60.00</h3>
                         <a href="" class="ir__producto">Ver producto</a>
                     </div>
                     <div class="card">
-                        <a href=""><img src="./imagenes/unsplash_sYVY_ZKwaxU.svg"></a>
+                        <a href="" category="diversos"><img src="./imagenes/unsplash_sYVY_ZKwaxU.svg"></a>
+                        <h2 class="producto">Producto XYZ</h2>
+                        <h3 class="precio">$60.00</h3>
+                        <a href="" class="ir__producto">Ver producto</a>
+                    </div>
+                    <div class="card" id="">
+                        <a href="" category="diversos"><img src="./imagenes/unsplash_jMT6BrgBuXU.svg" id=""></a>
                         <h2 class="producto">Producto XYZ</h2>
                         <h3 class="precio">$60.00</h3>
                         <a href="" class="ir__producto">Ver producto</a>
                     </div>
                     <div class="card">
-                        <a href=""><img src="./imagenes/unsplash_jMT6BrgBuXU.svg"></a>
+                        <a href="" category="diversos"><img src="./imagenes/unsplash_MxVkWPiJALs.svg"></a>
                         <h2 class="producto">Producto XYZ</h2>
                         <h3 class="precio">$60.00</h3>
                         <a href="" class="ir__producto">Ver producto</a>
                     </div>
                     <div class="card">
-                        <a href=""><img src="./imagenes/unsplash_MxVkWPiJALs.svg"></a>
-                        <h2 class="producto">Producto XYZ</h2>
-                        <h3 class="precio">$60.00</h3>
-                        <a href="" class="ir__producto">Ver producto</a>
-                    </div>
-                    <div class="card">
-                        <a href=""><img src="./imagenes/unsplash_r27umXAelDc.svg"></a>
+                        <a href="" category="diversos"><img src="./imagenes/unsplash_r27umXAelDc.svg"></a>
                         <h2 class="producto">Producto XYZ</h2>
                         <h3 class="precio">$60.00</h3>
                         <a href="" class="ir__producto">Ver producto</a>
@@ -214,16 +213,17 @@
             </div>
             <div class="form__contacto">
                 <form action="" method="post">
-                    <label id="contacto__titulo">Hable con nosotros</label>
+                    <h3 id="contacto__titulo">Hable con nosotros</h3>
                     <label for="text-contacto" id="nombre">Nombre</label>
                     <input id="text-contacto" type="text" name="user_name" required>
-                    <textarea cols="70" rows="5" id="msg" name="user_msg" placeholder="Escribe tu mensaje" ></textarea> 
-                    <button type="submit" class="boton__enviar">Enviar mensaje</button>
+                    <textarea cols="70" rows="5" id="msg" name="user_msg" placeholder="Escribe tu mensaje" required></textarea> 
+                    <button type="submit" class="boton__enviar boton">Enviar mensaje</button>
                 </form>
             </div> 
         </section>
     </body>
     <script src="./js/index.js"></script>
+    <script src="./js/jquery-3.6.0.js"></script>
     <footer>
         <div class="piePagina">
             <p>Realizado por Edwin Camacho</p>
